Added inline keyboard menu for model selection.Implemented Factory + Strategy + Object Pool patterns. Added per-user model context management. Implemented client caching with automatic invalidation